--- a/code/html/intro.html
+++ b/code/html/intro.html
@@ -1,9 +1,7 @@
 <h1>Introduction</h1>
 <p>Hello! </p>
 <h1>Flowchart</h1>
-<ol>
-<li>Risk conditions <a href="https://www.ncei.noaa.gov/cdo-web/">National Oceanic and Atmospheric Administration</a>, <a href="https://www.ncei.noaa.gov/">National Centers for Environmental Information</a>, <a href="https://www.ncei.noaa.gov/cdo-web/">Climate Data Online (CDO)</a>, provides free access to NCDC's archive of global historical weather and climate data in addition to station history information. These data include quality controlled daily, monthly, seasonal, and yearly measurements of temperature, precipitation, wind, and degree days as well as radar data and 30-year Climate Normals. Customers can also order most of these data as certified hard copies for legal use. </li>
-</ol>
+<p>Risk condition from climate &gt; Precense of vectors &gt; Infection &gt; Mortality &gt; Countermeasures </p>
 <p>Thermal biology to forecast pathogen transmission dynamics 
 Predict spatial and temporal spread of vector borne pathogen transmission </p>
 <p>The two most important abiotic factors of disease are temperature and water availability, which determine the abundance and distribution of arthropod vectors [Brown 2023]. Evidence suggests desiccation contributes to the decline of mosquito-borne pathogen transmission at warmer temperatures.</p>
@@ -27,6 +25,7 @@ Predict spatial and temporal spread of vector borne pathogen transmission </p>
 <h1>References</h1>
 <ol>
 <li>Brown, Joel J., Mercedes Pascual, Michael C. Wimberly, Leah R. Johnson, and Courtney C. Murdock. "Humidity–The overlooked variable in the thermal biology of mosquito‐borne disease." Ecology letters 26, no. 7 (2023): 1029-1049. <a href="https://doi.org/10.1111/ele.14228">https://doi.org/10.1111/ele.14228</a></li>
+<li>Risk conditions <a href="https://www.ncei.noaa.gov/cdo-web/">National Oceanic and Atmospheric Administration</a>, <a href="https://www.ncei.noaa.gov/">National Centers for Environmental Information</a>, <a href="https://www.ncei.noaa.gov/cdo-web/">Climate Data Online (CDO)</a>, provides free access to NCDC's archive of global historical weather and climate data in addition to station history information. These data include quality controlled daily, monthly, seasonal, and yearly measurements of temperature, precipitation, wind, and degree days as well as radar data and 30-year Climate Normals. Customers can also order most of these data as certified hard copies for legal use. </li>
 <li>Climate at a Glance County Mapping | County Palmer Z-Index <a href="https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/zndx/202308/3/value">https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/zndx/202308/3/value</a>
 1.Climate at a Glance Divisional Mapping <a href="https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping">https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping</a></li>
 <li>CDC Dengue Historic Data (2010-2023) <a href="https://www.cdc.gov/dengue/data-research/facts-stats/historic-data.html">https://www.cdc.gov/dengue/data-research/facts-stats/historic-data.html</a></li>
