--- a/code/html/intro.html
+++ b/code/html/intro.html
@@ -1,6 +1,4 @@
-<h1>Introduction</h1>
-<p>Hello! </p>
-<h1>Flowchart</h1>
+<h1>Objective</h1>
 <p>Risk condition from climate &gt; Precense of vectors &gt; Infection &gt; Mortality &gt; Countermeasures </p>
 <p>Thermal biology to forecast pathogen transmission dynamics 
 Predict spatial and temporal spread of vector borne pathogen transmission </p>
@@ -12,22 +10,19 @@ Predict spatial and temporal spread of vector borne pathogen transmission </p>
 <li>Relative humidity </li>
 <li>UV Radiation </li>
 <li>Water stress </li>
-<li>
-<p>Human-mediated environmental change </p>
-</li>
-<li></li>
+<li>Human-mediated environmental change </li>
 </ul>
 <p>The Aedes species of mosquito requires </p>
 <ol>
 <li>8 months of drying out </li>
-<li></li>
+<li>?? </li>
 </ol>
 <h1>References</h1>
 <ol>
 <li>Brown, Joel J., Mercedes Pascual, Michael C. Wimberly, Leah R. Johnson, and Courtney C. Murdock. "Humidity–The overlooked variable in the thermal biology of mosquito‐borne disease." Ecology letters 26, no. 7 (2023): 1029-1049. <a href="https://doi.org/10.1111/ele.14228">https://doi.org/10.1111/ele.14228</a></li>
 <li>Risk conditions <a href="https://www.ncei.noaa.gov/cdo-web/">National Oceanic and Atmospheric Administration</a>, <a href="https://www.ncei.noaa.gov/">National Centers for Environmental Information</a>, <a href="https://www.ncei.noaa.gov/cdo-web/">Climate Data Online (CDO)</a>, provides free access to NCDC's archive of global historical weather and climate data in addition to station history information. These data include quality controlled daily, monthly, seasonal, and yearly measurements of temperature, precipitation, wind, and degree days as well as radar data and 30-year Climate Normals. Customers can also order most of these data as certified hard copies for legal use. </li>
-<li>Climate at a Glance County Mapping | County Palmer Z-Index <a href="https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/zndx/202308/3/value">https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/zndx/202308/3/value</a>
-1.Climate at a Glance Divisional Mapping <a href="https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping">https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping</a></li>
+<li>Climate at a Glance County Mapping | County Palmer Z-Index <a href="https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/zndx/202308/3/value">https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/zndx/202308/3/value</a></li>
+<li>Climate at a Glance Divisional Mapping <a href="https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping">https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping</a></li>
 <li>CDC Dengue Historic Data (2010-2023) <a href="https://www.cdc.gov/dengue/data-research/facts-stats/historic-data.html">https://www.cdc.gov/dengue/data-research/facts-stats/historic-data.html</a></li>
 <li>CDC West Nile Virus Historic Data (1999-2023) <a href="https://www.cdc.gov/west-nile-virus/data-maps/historic-data.html">https://www.cdc.gov/west-nile-virus/data-maps/historic-data.html</a></li>
 </ol>
